update chapter 2 and 3

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -492,10 +492,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f8116f94690>"
+       "<IPython.lib.display.YouTubeVideo at 0x1f8f55b50a0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -573,10 +573,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f8116fbc0d0>"
+       "<IPython.lib.display.YouTubeVideo at 0x1f8f55f86d0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,9 +611,9 @@
     "<div class=arabic>\n",
     "\n",
     "<h2 class=title>\n",
-    "أهداف الباب\n",
+    "أهداف الفصل\n",
     "</h2>\n",
-    "عند اتمام هذا الباب يجب ان يكون لديك المام بعدة مبادئ اساسية عن لغة بايثون والتي من اهمها:\n",
+    "عند اتمام هذا الفصل يجب ان يكون لديك المام بعدة مبادئ اساسية عن لغة بايثون والتي من اهمها:\n",
     "\n",
     "<ol>\n",
     "<li> \n",
@@ -2290,7 +2290,7 @@
    "source": [
     "<div class=arabic>\n",
     "    <br>\n",
-    "    <h2>ملخص الفصل</h2>\n",
+    "    <h2 class=title>ملخص الفصل</h2>\n",
     "    <br>\n",
     "</div>"
    ]
@@ -2299,318 +2299,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=arabic><h2>اسئلة استيعابية</h2></div>"
+    "<div class=arabic><h2 class=title>اسئلة استيعابية</h2></div>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dfefe9512d44c14a13342815d367350",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='١. ما هو اقصى عدد من الاحرف والأرقام يمكن استخدامه في كتابة اسماء المتغيرات', option…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ea56892b245403997a1e521ebe893f2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='٢. لا يفرق مفسر بايثون في تعامله مع الكود البرمجي بين الاحرف الكبيرة والصغيرة؟', opt…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "690b2d82e4fe45fab9473e666338a042",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='٣. ايا من الجمل البرمجية التالية غير صحيح؟', options=('_a=1', '__a=1', '__str__=1', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4376612decd1430e994e22ab32b9b672",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='٤. ايا من أسماء المتغيرات التالية غير صحيح؟', options=('my_string_1', '1_string', 'f…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70315641e71b42a48e15e015716d9725",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='٥. ايا من الكلمات التالية يمكن استخدامها كاسم متغير؟', options=('pass', 'eval', 'non…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9c70dd8a6534e88a3e88a16ec7d5981",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='٦. كل الكلمات المحجوزة من قبل مفسر بايثون هي :', options=('مكتوبة بحروف كبيرة', 'مكت…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "991e56c5962d476e97fa883cba102c80",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='٧. أيا من الاتي صحيح فيما يخص أسماء المتغيرات في بايثون؟', options=('عدد غير محدود م…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99173ed9555249c2998b9a7443f73155",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='٨. اي من الجمل البرمجية التالية تعتبر خاطئة؟', options=('abc=1000,2000,3000', 'a b c…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98ec26a3948c4fa0b4b9baf505d2d67a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='٩. أيا من الاتي لا يمكن استخدامه كاسم متغير؟', options=('__init__', 'on', 'it', 'in'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "278a7b75cc234207b5587ff21d9bebbf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description=':كالتالي y مرفوعا للقيمة x ١٠. في بايثون تكتب العملية الرياضية', options=('x*y', 'x*…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec4f4d8a91d742eaa07cdecc134bfabd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description=':١١. أيا من الرموز الرياضية التالية يقوم بعملية القسمة بدون باقي', options=('/', '//…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0bf560dfc3c429aa1d4f3fcc4fa3464",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description=':22%3 ١٢. ماهو ناتج العملية الرياضية التالية', options=('1', '7', '5', '0'), style=D…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "144968368d1b402ca896e184d8bfc5b0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='١٣. بعض العمليات الرياضية يمكن اجراؤها على البيانات النصية؟', options=('صح', 'خطأ'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c714176badf94bafa11011edf61f0f7d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description=': 3*1**3 ١٤. ماهو ناتج العملية الرياضية التالية', options=('27', '3', '1', '9'), sty…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bce67069573a49a685aefbc7d0a310a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='١٥. اين من التالي له نفس الاسبقية في العمليات الحسابية؟', options=('ضرب ، قسمة ، جمع…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9fddd45a94e4d4d85b836fbe2dd5862",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description=' ١٦. اين من العمليات الرياضية التالية لديه الاسبقية الأعلى في اجراء العمليات الحسابي…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66a1215eb5b040dea132ef04508d1f2f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='ارسال', style=ButtonStyle(), _dom_classes=('s',))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4626e02d8694ca69162cb897c0260ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "from IPython.display import display,HTML\n",
-    "from ipywidgets import widgets\n",
-    "\n",
-    "\n",
-    "def grading(b):\n",
-    "    output.clear_output()\n",
-    "    grades=[]\n",
-    "    for i,q in enumerate(answers):\n",
-    "        if q[1]==q[0].value:\n",
-    "            grades.append('''<div class=\"arabic true-grade\">{}</div>'''.format( str(i+1)+\"- \"+\"اجابة صحيحة\"))   \n",
-    "        else:\n",
-    "            grades.append('''<div class=\"arabic false-grade\">{}</div>'''.format(str(i+1)+\"- \"+'اجابة خاطئة'))\n",
-    "    with output:\n",
-    "        for grade in grades:\n",
-    "            display(HTML(grade))\n",
-    "        display(redo)\n",
-    "        \n",
-    "def repeat(b):\n",
-    "    output.clear_output()\n",
-    "    for value in answers:\n",
-    "        value[0].value=None\n",
-    "\n",
-    "\n",
-    "q1=widgets.RadioButtons(style={'description_width':'initial'},options=[10,20,100,\"غير ذلك\"],value=None,description=\"١. ما هو اقصى عدد من الاحرف والأرقام يمكن استخدامه في كتابة اسماء المتغيرات\")\n",
-    "q2=widgets.RadioButtons(style=q1.style,options=[\"صح\",\"خطأ\"],value=None,description=\"٢. لا يفرق مفسر بايثون في تعامله مع الكود البرمجي بين الاحرف الكبيرة والصغيرة؟\")\n",
-    "q3=widgets.RadioButtons(style=q1.style,options=[\"_a=1\",\"__a=1\",\"__str__=1\",\"غير ذلك\"],value=None,description=\"٣. ايا من الجمل البرمجية التالية غير صحيح؟\")\n",
-    "q4=widgets.RadioButtons(style=q1.style,options=[\"my_string_1\",\"1_string\",\"foo\",\"_\"],value=None,description=\"٤. ايا من أسماء المتغيرات التالية غير صحيح؟\")\n",
-    "q5=widgets.RadioButtons(style=q1.style,options=[\"pass\",\"eval\",\"nonlocal\",\"assert\"],value=None,description=\"٥. ايا من الكلمات التالية يمكن استخدامها كاسم متغير؟\")\n",
-    "q6=widgets.RadioButtons(style=q1.style,options=[\"مكتوبة بحروف كبيرة\",\"مكتوبة بحروف صغيرة\",\"الحرف الاول فيها كبير\",\"غير ذلك\"],value=None,description=\"٦. كل الكلمات المحجوزة من قبل مفسر بايثون هي :\")\n",
-    "q7=widgets.RadioButtons(style=q1.style,options=[\"عدد غير محدود من الأحرف والارقام\",\"الأسماء الخاصة لابد ان تبدأ وتنتهي بشرطة سفلية\",\"ــ و & هما الرمزان المسموح باستخدامهما في كتابة أسماء المتغيرات\",\"غير ذلك\"],value=None,description=\"٧. أيا من الاتي صحيح فيما يخص أسماء المتغيرات في بايثون؟\")\n",
-    "q8=widgets.RadioButtons(style=q1.style,options=[\"abc=1000,2000,3000\",\"a b c=1000,2000,3000\",\"a_b_c=1000,2000,3000\",\"a,b,c=1000,2000,3000\"],value=None,description=\"٨. اي من الجمل البرمجية التالية تعتبر خاطئة؟\")\n",
-    "q9=widgets.RadioButtons(style=q1.style,options=['__init__','on','it','in'],value=None,description=\"٩. أيا من الاتي لا يمكن استخدامه كاسم متغير؟\")\n",
-    "q10=widgets.RadioButtons(style=q1.style,options=[\"x*y\",\"x**y\",\"x^y\",\"x^^y\"],value=None,description=\":كالتالي y مرفوعا للقيمة x ١٠. في بايثون تكتب العملية الرياضية\")\n",
-    "q11=widgets.RadioButtons(style=q1.style,options=[\"/\",\"//\",\"%\",\"غير ذلك\"],value=None,description=\":١١. أيا من الرموز الرياضية التالية يقوم بعملية القسمة بدون باقي\")\n",
-    "q12=widgets.RadioButtons(style=q1.style,options=[\"1\",\"7\",\"5\",\"0\"],value=None,description=\":22%3 ١٢. ماهو ناتج العملية الرياضية التالية\")\n",
-    "q13=widgets.RadioButtons(style=q1.style,options=[\"صح\",\"خطأ\"],value=None,description=\"١٣. بعض العمليات الرياضية يمكن اجراؤها على البيانات النصية؟\")\n",
-    "q14=widgets.RadioButtons(style=q1.style,options=[\"27\",\"3\",\"1\",\"9\"],value=None,description=\": 3*1**3 ١٤. ماهو ناتج العملية الرياضية التالية\")\n",
-    "q15=widgets.RadioButtons(style=q1.style,options=[\"ضرب ، قسمة ، جمع\",\"جمع ، طرح\",\"جمع ، طرح ، قسمة ، ضرب\",\"جمع ، ضرب\"],value=None,description=\"١٥. اين من التالي له نفس الاسبقية في العمليات الحسابية؟\")\n",
-    "q16=widgets.RadioButtons(style=q1.style,options=[\"جمع\",\"ضرب\",\"اس\",\"اقواس\"],value=None,description=\" ١٦. اين من العمليات الرياضية التالية لديه الاسبقية الأعلى في اجراء العمليات الحسابية؟\")\n",
-    "output=widgets.Output()\n",
-    "result=widgets.Button(description=\"ارسال\")\n",
-    "result.add_class(\"s\")\n",
-    "redo=widgets.Button(description=\"اعادة المحاولة\")\n",
-    "answers=[(q1,\"غير ذلك\"),(q2,\"خطأ\"),(q3,\"غير ذلك\"),(q4,\"1_string\"),(q5,\"nonlocal\"),(q6,\"مكتوبة بحروف صغيرة\"),(q7,\"غير ذلك\"),(q8,\"a b c=1000,2000,3000\"),(q9,\"it\"),(q10,\"x**y\"),(q11,\"//\"),(q12,\"1\"),(q13,\"صح\"),(q14,\"3\"),(q15,\"جمع ، طرح\"),(q16,\"اقواس\")]\n",
-    "for i in answers:\n",
-    "    display(i[0])\n",
-    "display(result,output)\n",
-    "result.on_click(grading)\n",
-    "redo.on_click(repeat)"
+    "<div class=arabic>\n",
+    "1- ما هو اقصى عدد من الاحرف والأرقام يمكن استخدامه في كتابة اسماء المتغيرات؟\n",
+    "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "2-  صح ام خطأ؟ لا يفرق مفسر بايثون في تعامله مع الكود البرمجي بين الاحرف الكبيرة والصغيرة.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "3-كيف تكتب في بايثون العملية الرياضية x مرفوعا للقوة y؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "4-ماهو ناتج العملية الرياضية 3%22؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "5-ماهو ناتج العملية الرياضية 3**1*3؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "6-اي من الاسماء التالية يمكن استخدامه كاسم متغير [\"in\",\"it\",\"on\",\"__init\"]؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2647,7 +2421,7 @@
     "<div class=arabic>\n",
     "\n",
     "<h2 class=title>\n",
-    "أهداف الباب\n",
+    "أهداف الفصل\n",
     "</h2>\n",
     "عند اتمام هذا الفصل يجب ان يكون لديك المام بالآتي: \n",
     "\n",
@@ -9737,7 +9511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   },
   "toc": {
    "navigate_menu": true,
