delete scratch cells

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -1,20 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$ f(x)=\\sqrt{\\frac{sin(x)}{x}}$$"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -122,6 +108,13 @@
     "   s = '<style type=\"text/css\">%s</style>' % styles     \n",
     "   return HTML(s)\n",
     "_set_css_style(\"custom.css\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"arabic\"><center>بسم الله الرحمن الرحيم</center></div>"
    ]
   },
   {
