dealing file was completed

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -6698,11 +6698,11 @@
     "\n",
     "<ol>\n",
     "<li> \n",
-    "معرفة كيفية استخدام الدالة  ()input من اجل ادخال البيانات   </li>\n",
+    "معرفة كيفية استخدام الدالة  ()input من اجل ادخال البيانات للبرنامج بشكل تفاعلي.   </li>\n",
     "<li>\n",
     "التعرف على طريقة فتح الملفات النصية. </li>\n",
     "<li>\n",
-    "التعرف طريقة قراءة البيانات النصية.</li> \n",
+    "التعرف على طريقة قراءة البيانات النصية.</li> \n",
     "    <li>\n",
     "    التعرف على طرق الكتابة والحفظ على ملف نصي.\n",
     "    </li>\n",
@@ -6761,9 +6761,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number: 10\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "num=input(\"Please enter a number: \")\n",
     "print(type(num))"
@@ -6781,14 +6790,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a value for x: 5\n",
+      "please enter a value for y: 9\n",
+      "The sum of x and y =  59\n"
+     ]
+    }
+   ],
    "source": [
     "x=input(\"please enter a value for x: \")\n",
     "y=input(\"please enter a value for y: \")\n",
     "sum=x+y\n",
-    "print(\"The sum of x and y = \",sum)\n"
+    "print(\"The sum of x and y = \",sum)"
    ]
   },
   {
@@ -6796,15 +6815,25 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "عند تنفيذ البرنامج السابق وإدخال قيمة 5 للمتغير x وقيمة 9 للمتغير y نجد ان هناك مشكلة في البرنامج. فالبرنامج تعامل مع المدخلات على انها سلسلة نصية وتمت عملية الجمع كما تعلمنا سابقا بتجميع النصوص مع بعضها البعض. يمكن حل المشكلة هذه بتحويل سلسلة النصوص المدخلة الى ارقام كما في المثال \n",
+    "عند تنفيذ البرنامج السابق وإدخال قيمة 5 للمتغير x وقيمة 9 للمتغير y نجد ان هناك مشكلة في البرنامج. فالبرنامج تعامل مع المدخلات على انها سلسلة نصية وتمت عملية الجمع كما تعلمنا سابقا بتجميع النصوص مع بعضها البعض. يمكن حل المشكلة هذه بتحويل سلسلة النصوص المدخلة الى ارقام عشرية باستخدام الدالة ()float كما في المثال التالي: \n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a value for x: 5\n",
+      "please enter a value for y: 9\n",
+      "The sum of x and y =  14.0\n"
+     ]
+    }
+   ],
    "source": [
     "x=input(\"please enter a value for x: \")\n",
     "y=input(\"please enter a value for y: \")\n",
@@ -6872,7 +6901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=arabic><h2 class=title>قراءة البيانات من الملفات</h2></div>"
+    "<div class=arabic><h2 class=title>فتح الملفات</h2></div>"
    ]
   },
   {
@@ -6901,10 +6930,10 @@
     "<ul>\n",
     "    حيث تحتوي الدالة على ثلاثة مدخلات احدهم الزامي والاخران اختياريان وهي على النحو التالي:\n",
     "<li> filename : مدخل الزامي يمثل اسم الملف المطلوب التعامل معه. اذا لم يكن اسم الملف موجود في نفس المجلد الذي يتم من خلاله تشغيل البرنامج فلابد من تحديد\n",
-    " مسار الملف حتى يتسنى للبرنامج الوصول للملف.\n",
+    " مسار الملف حتى يتسنى للبرنامج الوصول للملف. كما يجب ملاحظة ان كتابة اسم و مسار الملف دائما ما يكون على هيئة نص أي بمعنى آخر يجب ان يكون بين احدى علامات التنصيص التي يسمح بها مفسر بايثون.\n",
     "</li>\n",
     "<li>\n",
-    "Mode : مدخل اختياري يمثل نوع العملية المراد تنفيذها على الملف. والجدول التالي يمثل العمليات الاكثر استخداما عند التعامل مع الملفات:\n",
+    "Mode : مدخل اختياري يمثل نوع العملية المراد تنفيذها على الملف.  وعند حذف قيمة هذا المدخل   فان القيمة الافتراضية التي سوف يعتمدها مفسر بايثون هي عملية القراءة \"r\". والجدول التالي يمثل العمليات الاكثر استخداما عند التعامل مع الملفات:\n",
     "<div class=arabic>\n",
     "    <br>\n",
     "    <table style=\"width:80%\">\n",
@@ -6913,7 +6942,7 @@
     "    <td><center>العملية</td>\n",
     "    <td><center>قراءة ملف</td>\n",
     "    <td><center>كتابة ملف</td>\n",
-    "    <td><center>اضافة بيانات الى ملف</td>\n",
+    "    <td><center>اضافة بيانات الى آخر الملف</td>\n",
     "  </tr>\n",
     "      <tr>\n",
     "    <td border=\"0\"><center>mode</td>\n",
@@ -6923,13 +6952,13 @@
     "  </tr>\n",
     "  \n",
     "</table>\n",
-    "    وعند حذف قيمة هذا المدخل عند استخدام الدالة ()open فان القيمة الافتراضية التي سوف يعتمدها مفسر بايثون هي عملية القراءة \"r\".\n",
+    "   \n",
     "</div>\n",
     "</li>\n",
     "<br>\n",
     "<li>\n",
     "buffer : \n",
-    "مدخل اختياري يمثل كمية البيانات التي يراد قراءتها او كتابتها الى الملف. وعند حذف هذه القيمة عند استخدام الدالة ()open فان القيمة الافتراضية التي سوف يعتمدها مفسر بايثون هي كافة محتويات الملف.\n",
+    "مدخل اختياري يمثل كمية البيانات التي يراد قراءتها او كتابتها الى الملف. وعند حذف هذه القيمة عند استخدام الدالة ()open فان القيمة الافتراضية التي سوف يعتمدها مفسر بايثون هي قراءة كافة محتويات الملف.\n",
     "</li>\n",
     "</ul>\n",
     "</div>\n",
@@ -6941,7 +6970,7 @@
    "metadata": {},
    "source": [
     "<div class=arabic>\n",
-    "من خلال التركيب السابق اصبح لدينا كائن في ذاكرة الكمبيوتر تم تحديد نوع العملية المرادة منه والان جاء دور شرح كيف يتم اجراء عملية القراءة والكتابة الفعلية على هذا الكائن.\n",
+    "من خلال استخدام التركيب السابق يصبح لدينا كائن في ذاكرة الكمبيوتر فقط تم تحديد نوع العملية المراد عملها من خلاله اما اجراء عملية القراءة والكتابة الفعلية لا تتم الا باستخدام دوال خاصة بالقراءة والكتابة والتي سوف نتعرف عليها بشئ من التفصيل في الجزئية التالية.\n",
     "</div>\n"
    ]
   },
@@ -6979,20 +7008,363 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=arabic>عند تشغيل الكود السابق سوف يقوم مفسر بايثون بانشاء كائن برمجي داخل الذاكرة واسناد هذا الكائن للمتغير  file_name ومن ثم يقوم بتنفيذ  عملية قراءة محتيويات الملف من خلال الدالة ()read واخيرا يقوم بطباعة محتويات الملف من خلال الدالة ()print واغلاق الكائن البرمجي ومسحة من الذاكرة من خلال الدالة ()close. </div>"
+    "<div class=arabic>عند تشغيل الكود السابق سوف يقوم مفسر بايثون بانشاء كائن برمجي داخل الذاكرة يمثل قناة تواصل بين القرص الصلب الذي يحوي الملف ومفسر بايثون ويتم اسناد هذا الكائن للمتغير  file_name . لاحظ اننا احتجنا الى كتابة مسار الملف لان الملف الذي نحن بصدده لا يقع في نفس مجلد الكتاب مباشرة وانما يوجد في مجلد فرعي اسمه data . كما يجب ملاحظة ان مفسر بايثون تعرف على نوع العملية التي نريد القيام بها على الملف على الرغم من عدم تحديدها في مدخلات الدالة ()open وذلك لان القيمة الافتراضية لنوع العملية mode هي عملية القراءة \"r\" كما اشرنا سابقا. ومن ثم يقوم بتنفيذ  عملية قراءة محتيويات الملف من خلال الدالة ()read ويقوم باسناد محتويات الملف للمتغير data واخيرا يقوم بطباعة محتويات الملف من خلال الدالة  ()print واغلاق الكائن البرمجي ومسحة من الذاكرة من خلال الدالة ()close. </div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://www.pythonforbeginners.com/cheatsheet/python-file-handling"
+    "<div class=arabic>\n",
+    "كما يجب الإشارة الى ان هناك دوال أخرى تقوم بعملية القراءة من ملف ولكن بخصائص تختلف قليلاً عن الدالة ()read. فمثلاً يمكن استخدام الدالة ()readline لقراءة سطر واحد من الملف كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunday: go to school\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file=open(\"data/days.txt\")\n",
+    "line=file.readline()\n",
+    "print(line)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "كما يمكن قراءة الملف السابق بأكمله باستخدام الدالة ()readlines (لاحظ s الجمع للتفريق بين الدالة السابقة والدالة التي نحن بصددها الآن) بحيث يكون ناتج القراءة عبارة عن قائمة من البيانات كل بيان فيها يمثل محتوى كل سطر من الملف الذي تتم قراءته كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sunday: go to school\\n', 'Monday: play football\\n', 'Tuesday: visit mam\\n', 'Friday: read a chapter from Quran.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "file=open(\"data/days.txt\")\n",
+    "lines=file.readlines()\n",
+    "print(lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic><h2 class=title>تمارين استكشافية</h2></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "1.\tقم بكتابة برنامج يقرأ من ملف نصي اسمه numbers.txt موجود في نفس المجلد data ويحتوي على الاعداد من 1 الى 10 في السطر الاول و 11 الى 20 في السطر الثاني و 21 الى 30 في السطر الثالث. حاول ان تقرأ محتويات الملف باستخدام الدوال الثلاث السابقة وطباعتها على الشاشة؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "2.\tحاول التعرف على نوع البيانات الناتجة من عملية القراءة بالدوال الثلاث السابقة باستخدام الدالة ()type؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "    3.\tقم بفتح الملف countries.txt  من المجلد data ثم قم بقراءة الملف وطباعة جميع أسماء الدول الموجودة في الملف؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "4.\tطور البرنامج في التمرين 3 بحيث يقوم بطباعة الدول التي يزيد عدد حروفها عن 10 احرف؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "5.\tطور البرنامج في التمرين 3 بحيث يقوم بطباعة الدول التي يقل عدد حروفها عن 6 احرف؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>ثانيا: عملية الكتابة الى الملفات</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "لنفرض الان اننا نريد الكتابة على ملف ماذا بوسعنا ان نغير في الدالة ()open للقيام بهذه المهمة؟ \n",
+    "في حقيقة الامر ان الكتابة على ملف تتطلب فقط القيام بتغيير قيمة النمط (mode) الافتراضية في الدالة ()open والتي تمثل المدخل الثاني الذي يلي اسم الملف كما في المثال التالي:\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file=open(\"data/weeks.txt\",\"w\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "عند كتابة “w” كمدخل ثاني في الدالة ()open فان مفسر بايثون سوف يقوم بإنشاء كائن ارتباط للكتابة بدلاً من كائن القراءة الافتراضي. لكن يجب ملاحظة ان هناك اختلاف بسيط بين نمطي الكتابة والقراءة. فنمط الكتابة عند عدم وجود الملف المحدد فان مفسر بايثون يقوم بإنشائه تلقائيا بينما نمط القراءة يعطي رسالة بوجود خطأ في حال عدم العثور على الملف. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "ودالة الكتابة في بايثون هي ()write. ويتم التعامل معها تقريبا بنفس الطريقة التي استخدمناها مع دالة القراءة كما هو موضح في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file=open(\"data/weeks.txt\",\"w\")\n",
+    "file.write(\"1st week 2nd week 3rd week 4th week\")\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "فبعد انشاء كائن الارتباط للكتابة  file نستخدم الدالة ()write لتنفيذ عملية الكتابة على الملف والتي هي هنا عبارة عن نص وضع بين قوسي الدالة ()write. ويمكن كذلك استخدام الدالة ()writelines وذلك لكتابة قائمة من البيانات كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file=open(\"data/greeting.txt\",\"w\")\n",
+    "file.writelines([\"Welcome \",\"to \", \"python \", \"world!\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "يجب ملاحظة ان فتح ملف بغرض الكتابة عليه يختلف بحسب النمط المدخل. فالنمط “w” يعنى مسح محتويات الملف السابقة ان وجدت والكتابة على الملف من بدايته. اما إذا استخدمنا النمط “a” كمدخل ثاني في الدالة ()open فان ذلك يعنى ان محتويات الملف السابقة لا يتم مسحها وانما تتم الكتابة من حيث ما انتهى محتوى الملف السابق. وهناك أنماط أخرى لا يسع الحديث عنها هنا ويمكن البحث عنها من خلال محركات البحث للاستزادة.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic><h2 class=title>تمارين استكشافية</h2></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "    １-\tلتاكد ان عمليتي الكتابة في المثالين السابقين تمتا بشكل صحيح. قم بتنفيذ كل كود ومن ثم قم بكتابة كود برمجي اخر يقوم بقراءة وطباعة ما تم كتابته؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "２-\tقم بفتح الملف countries.txt  وحاول كتابة عدد الدول في نهاية الملف؟\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "ان فتح ملف سواء للقراءة او الكتابة بالطريقة السابقة قد يسبب بعض إشكالية في نفاذ جزء من مساحة الذاكرة وذلك لان الملف الذي تم فتحه سوف يظل في ذاكرة الكمبيوتر حتى يتم اغلاقه. لذلك ان استخدام الطريقة السابقة للتعامل مع الملفات يتطلب تنظيف الذاكرة بعد الانتهاء من عملية القراءة او الكتابة باستخدام الدالة ()close كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st week 2nd week 3rd week 4th week\n"
+     ]
+    }
+   ],
+   "source": [
+    "file=open(\"data/weeks.txt\")\n",
+    "content=file.read()\n",
+    "print(content)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "ولتلافي نسيان اغلاق الملفات بعد الانتهاء من اجراء العمليات عليها يمكن استخدام تركيب لغوي آخر في لغة بايثون يعتمد على استخدام البادئة with والذي من خلاله يقوم مفسر بايثون بإغلاق الملف المفتوح بمجرد الانتهاء من هذه المهمة كما في المثال التالي:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st week 2nd week 3rd week 4th week\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data/weeks.txt\") as file:\n",
+    "    content=file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "لاحظ ان في المثال السابق تم استخدام الاتي:<br>\n",
+    "•\tبدء التركيب اللغوي باستخدام كلمة with.<br>\n",
+    "•\tاستخدام كلمة as لإسناد كائن الربط الى المتغير file.<br>\n",
+    "•\tاستخدام النقطتين فوق بعض \":\" عند نهاية السطر الاول.<br>\n",
+    "•\tترك مسافة في الاسطر التي تلي السطر الاول للقيام بالعمليات المطلوبة على الملف المفتوح.<br>\n",
+    "•\tيتم اقفال كائن الارتباط بعد الانتهاء من اخر سطر في الاسطر المبدوءة بترك مسافة.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic><h2 class=title>تمارين استكشافية</h2></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=arabic>\n",
+    "    １-\tقم باعادة كتابة تمارين القراءة والكتابة السابقة باستخدام التركيب اللغوي with؟\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "markdown",
